# evmplay

./: .gitignore  Cargo.toml
contracts/: simple.abi  simple.sol
examples/: simple.rs
src/: contract.rs  evmplay.rs  solc.rs
